--- a/launch/map_layout.yaml
+++ b/launch/map_layout.yaml
@@ -8,15 +8,15 @@ obstacles:
   rand:
     size: 3
     divisor: 6
-  #obs_0:
-  #  type: "square"
-  #  size: 3
-  #  position:
-  #    x: 15
-  #    y: 15
-  #obs_1:
-  #  type: "circle"
-  #  size: 5
-  #  position:
-  #    x: 40
-  #    y: 30
+  obs_0:
+    type: "square"
+    size: 3
+    position:
+      x: 50
+      y: 20
+  obs_1:
+    type: "circle"
+    size: 3
+    position:
+      x: 15
+      y: 30
